feat: add q search
